log
Thu 04 May 2023 01:13:31 PM UTC: 
 tests:  0|5
total_score: 0/70
48f5bc6
Thu 04 May 2023 01:25:19 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: unused variable ‘k’ [-Werror=unused-variable]
   56 |     int k;
      |         ^
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   55 |     int j;
      |         ^
sudoku.c:54:9: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |     int i;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
97f6687
Thu 04 May 2023 01:25:32 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: unused variable ‘k’ [-Werror=unused-variable]
   56 |     int k;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
a8285b7
Thu 04 May 2023 01:25:41 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ef41c0d
Thu 04 May 2023 01:28:25 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
aafdef1
Thu 04 May 2023 04:31:31 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:19: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   66 |             Node *nuevoNodo = createNode();
      |                   ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b08d8fe
Thu 04 May 2023 04:32:26 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:19: error: variable ‘nuevoNodo’ set but not used [-Werror=unused-but-set-variable]
   66 |             Node *nuevoNodo = createNode();
      |                   ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6445278
Thu 04 May 2023 04:33:06 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
3013e95
Thu 04 May 2023 04:33:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
aba10a8
Thu 04 May 2023 04:36:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f14dec8
Thu 04 May 2023 04:47:37 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:7: error: unused variable ‘j’ [-Werror=unused-variable]
   48 |   int j;
      |       ^
sudoku.c:47:7: error: unused variable ‘i’ [-Werror=unused-variable]
   47 |   int i;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
d3dfc65
